update to version 0.16.0

--- a/index.html
+++ b/index.html
@@ -104,7 +104,8 @@
 
         .block2 {
             position: absolute;
-            top: 17px;     /*TODO button position should not be hard coded*/
+            top: 17px;
+            /*TODO button position should not be hard coded*/
             right: -14px;
             z-index: 400;
 
@@ -132,8 +133,6 @@
         .gallery_entry:hover {
             opacity: 0.7;
         }
-
-
     </style>
     <title>Mobject Gallery</title>
     <link rel="icon" type="image/x-icon" href="icon.png">
@@ -149,26 +148,26 @@
     <div> <small>
             <br>
             <b> Info: </b>
-            
+
             <br>
         </small>
     </div>
 
     <div class="div1">
 
-<!-- maybe better html indention possible for this pre block?  -->
-<pre>
+        <!-- maybe better html indention possible for this pre block?  -->
+        <pre>
 <b style="background-color:#ece6e2; ">Here is the corresponding code:</b>
 <code class="python" id="info_field"> <br> </code>
-</pre>  <!-- better naming of these divs here-->
+</pre> <!-- better naming of these divs here-->
         <div class='block2'>
             <button type="button" onclick="reset_content(this)">X</button>
         </div>
     </div>
 
     <div class="box">
-        <p style="opacity: 0.8;"></p>  <tt> v0.15.1 (Manim) </tt><br>
-        <p style="opacity: 0.4;"> <tt>  </tt> </p>
+        <p style="opacity: 0.8;"></p> <tt>v0.16.0.post0 (Manim) </tt><br>
+        <p style="opacity: 0.4;"> <tt> </tt> </p>
     </div>
     <script>
 
@@ -203,7 +202,7 @@
         </ul>
     </div>
 
-    <div style="position: fixed; bottom: 10px; right:10px"> Hello World! </a></div>
+    <div style="position: fixed; bottom: 10px; right:10px"></a></div>
 
 
 </body>
