--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.0/styles/default.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.0/highlight.min.js"></script>
     <script>
         hljs.highlightAll();
@@ -19,6 +20,30 @@
         }
     </script>
     <style>
+        a:link {
+            color: black;
+            background-color: transparent;
+            text-decoration: none;
+        }
+
+        a:visited {
+            color: black;
+            background-color: transparent;
+            text-decoration: none;
+        }
+
+        a:hover {
+            color: grey;
+            background-color: transparent;
+            text-decoration: underline;
+        }
+
+        a:active {
+            color: blue;
+            background-color: transparent;
+            text-decoration: underline;
+        }
+
         h1 {
             margin-bottom: 0;
             margin-top: 0
@@ -42,8 +67,8 @@
 
         .box2 {
             position: absolute;
-            top: 45px;
-            right: 5px;
+            top: 15px;
+            right: 15px;
         }
 
         /* basic positioning */
@@ -61,22 +86,8 @@
             border-radius: 4px;
             float: left;
             width: 12px;
-            height: 12px;
+            height: 10px;
             margin: 2px;
-        }
-
-        /* your colors */
-
-        .legend .label1 {
-            background-color: #ED6A5A;
-        }
-
-        .legend .label2 {
-            background-color: #007AB8;
-        }
-
-        .legend .label3 {
-            background-color: #A8DCF0;
         }
 
         button {
@@ -95,7 +106,7 @@
 
         .div1 {
             width: 500px;
-            height: 150px;
+            height: 100px;
             border: 0;
             font-size: 10px;
             position: sticky;
@@ -143,18 +154,13 @@
 <body style="background-color:#ece6e2;">
     <div style="text-align:center">
         <h2>Mobject Gallery</h2>
-        Repo: <a href=" https://github.com/kolibril13/mobject-gallery">https://github.com/kolibril13/mobject-gallery</a>
     </div>
     <div> <small>
-            <br>
-            <b> Info: </b>
 
-            <br>
         </small>
     </div>
 
     <div class="div1">
-
         <!-- maybe better html indention possible for this pre block?  -->
         <pre>
 <b style="background-color:#ece6e2; ">Here is the corresponding code:</b>
@@ -193,12 +199,9 @@
 
     <div class="box2">
         <ul class="legend">
-            <li><span class="label1"></span> </li>
-            <br>
-            <li><span class="label2"></span> </li>
-            <br>
-            <li><span class="label3"></span> </li>
-            <br>
+            <a title="Link to GitHub" href="https://github.com/kolibril13/mobject-gallery"><i class="fa fa-github"
+                    class="tooltip" style='font-size:36px;'></i></a>
+
         </ul>
     </div>
 
