--- a/index.html
+++ b/index.html
@@ -59,9 +59,10 @@
             margin-top: 0
         }
 
-        .gallery_div{
+        .gallery_div {
             max-width: 850px;
         }
+
         .box {
             position: absolute;
             top: 10px;
@@ -156,7 +157,7 @@
 
 <body style="background-color:#ece6e2;">
     <div style="text-align:center">
-        <h2>Mobject Gallery</h2>
+        <h2><tt>Mobject Gallery</tt></h2>
     </div>
     <div> <small>
 
@@ -205,7 +206,6 @@
         <ul class="legend">
             <a title="Link to GitHub" href="https://github.com/kolibril13/mobject-gallery"><i class="fa fa-github"
                     class="tooltip" style='font-size:36px;'></i></a>
-
         </ul>
     </div>
 
