update version number

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
     </div>
 
     <div class="box">
-        <p style="opacity: 0.8;"></p> <tt>v0.16.0.post0 (Manim) </tt><br>
+        <p style="opacity: 0.8;"></p> <tt>v0.17.1 (Manim) </tt><br>
         <p style="opacity: 0.4;"> <tt> </tt> </p>
     </div>
     <div class="gallery_div">
