--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
                     <td class="info_version">
                         <p style="opacity: 0.8;"> <a title="Plywood Core at GitHub"
                                 href="https://github.com/kolibril13/mobject-gallery"><span
-                                    class="tooltip">user content v0.17.1 </span></a><br></p>
+                                    class="tooltip">user content v0.17.1 (Manim) </span></a><br></p>
 
                         <p style="opacity: 0.4;"> <a title="Plywood Core at GitHub"
                                 href="https://github.com/kolibril13/plywood-gallery"><span class="tooltip">
